--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./public/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="./public/calendar.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Calendar App</title>
+  <title>Vue Calendar App</title>
 </head>
 
 <body>
